[tool.poetry]
name = "origins"
version = "0.1.0"
description = ""
authors = ["mwala <mwalamulenga.zt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
